--- a/package.xml
+++ b/package.xml
@@ -45,6 +45,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>map</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -52,6 +53,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>map</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
