--- a/package.xml
+++ b/package.xml
@@ -47,6 +47,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>map</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>dwa</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
@@ -54,6 +55,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
   <run_depend>map</run_depend>
+  <run_depend>dwa</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
